more clarifications, some restructuring, more refs and definitions

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         specStatus: "unofficial",
         noRecTrack: true,
         xref: true,
+        latestVersion: "https://interledger.github.io/web-monetization-flows/",
         editors: [
             {
                 name: "Alexander Surkov",
@@ -28,6 +29,12 @@
             {
                 name: "Radu Popa",
                 mailto: "radu@interledger.foundation",
+                company: "Interledger",
+                companyURL: "https://interledger.org/",
+            },
+            {
+                name: "Sid Vishnoi",
+                mailto: "sid@interledger.foundation",
                 company: "Interledger",
                 companyURL: "https://interledger.org/",
             },
@@ -62,6 +69,10 @@
                 title: "GNAP",
                 href: "https://datatracker.ietf.org/doc/html/draft-ietf-gnap-core-protocol",
             },
+            Extension: {
+                title: "Web Monetization Extension",
+                href: "https://github.com/interledger/web-monetization-extension"
+            }
         },
         xref: [
             "csp",
@@ -90,5 +101,6 @@
     <div data-include="section/connecting-a-wallet.html" data-include-replace="true"></div>
     <div data-include="section/algorithms.html" data-include-replace="true"></div>
     <div data-include="section/dictionaries.html" data-include-replace="true"></div>
+    <section id="conformance"></section>
 </body>
 </html>
