chore: add .algorithm on section

--- a/section/connecting-a-wallet.html
+++ b/section/connecting-a-wallet.html
@@ -62,11 +62,11 @@
     </aside>
     </section>
 
-    <section>
+    <section class="algorithm">
     <h3>Connecting a wallet</h3>
     <p>The user can initiate the wallet setup from the [=setup page=].</p>
     <p>To process the wallet setup, given a string |walletAddress:DOMString| (the [=wallet address=] provided by the user), a number |budget:number| (the budget that the user wants to use for Web Monetization) and a boolean |renewMonthly: boolean| (an option to renew the budget every month):</p>
-    <ol class="algorithm">
+    <ol>
         <li>
             Let |walletAddressDetails:WalletAddressDetails| be the result of the [=send a wallet address request=] algorithm on |walletAddress|.
         </li>
