fix(algorithms): fix ReSpec linking errors wrt request/window

--- a/section/algorithms.html
+++ b/section/algorithms.html
@@ -26,8 +26,8 @@
                     <dd>"follow"</dd>
                     <dt>[=request/client=]</dt>
                     <dd>null</dd>
-                    <dt>[=request/window=]</dt>
-                    <dd>"no-window"</dd>
+                    <dt>{{RequestInit/window}}</dt>
+                    <dd>null</dd>
                     <dt>[=request/service-workers mode=]</dt>
                     <dd>"none"</dd>
                     <dt>[=request/destination=]</dt>
@@ -121,8 +121,8 @@
                     <dd>"follow"</dd>
                     <dt>[=request/client=]</dt>
                     <dd>null</dd>
-                    <dt>[=request/window=]</dt>
-                    <dd>"no-window"</dd>
+                    <dt>{{RequestInit/window}}</dt>
+                    <dd>null</dd>
                     <dt>[=request/service-workers mode=]</dt>
                     <dd>"none"</dd>
                     <dt>[=request/destination=]</dt>
@@ -247,8 +247,8 @@
                     <dd>"follow"</dd>
                     <dt>[=request/client=]</dt>
                     <dd>null</dd>
-                    <dt>[=request/window=]</dt>
-                    <dd>"no-window"</dd>
+                    <dt>{{RequestInit/window}}</dt>
+                    <dd>null</dd>
                     <dt>[=request/service-workers mode=]</dt>
                     <dd>"none"</dd>
                     <dt>[=request/destination=]</dt>
@@ -317,8 +317,8 @@
                     <dd>"follow"</dd>
                     <dt>[=request/client=]</dt>
                     <dd>null</dd>
-                    <dt>[=request/window=]</dt>
-                    <dd>"no-window"</dd>
+                    <<dt>{{RequestInit/window}}</dt>
+                    <dd>null</dd>
                     <dt>[=request/service-workers mode=]</dt>
                     <dd>"none"</dd>
                     <dt>[=request/destination=]</dt>
