Add session flow section template

--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
     <div data-include="section/introduction.html" data-include-replace="true"></div>
     <div data-include="section/terms.html" data-include-replace="true"></div>
     <div data-include="section/connecting-a-wallet.html" data-include-replace="true"></div>
+    <div data-include="section/session-flow.html" data-include-replace="true"></div>
     <div data-include="section/algorithms.html" data-include-replace="true"></div>
 </body>
 </html>
