Add session flow section template (#4)

--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
     <div data-include="section/terms.html" data-include-replace="true"></div>
     <div data-include="section/storage.html" data-include-replace="true"></div>
     <div data-include="section/connecting-a-wallet.html" data-include-replace="true"></div>
+    <div data-include="section/session-flow.html" data-include-replace="true"></div>
     <div data-include="section/algorithms.html" data-include-replace="true"></div>
     <div data-include="section/dictionaries.html" data-include-replace="true"></div>
     <section id="conformance"></section>
