--- a/section/algorithms.html
+++ b/section/algorithms.html
@@ -42,7 +42,7 @@
                 Let <var>details</var> be null.
             </li>
             <li>
-                Perform a [=fetch request=] with <var>request</var> and with <var>processResponseConsumeBody</var> set to the following steps, given a [=response=] and <var>response</var>'s [=request/body=] <var>responseBody</var>:
+                Perform a [=fetch request=] with <var>request</var> and with <var>processResponseConsumeBody</var> set to the following steps, given a [=response=] <var>response</var> and <var>response</var>'s [=response/body=] <var>responseBody</var>:
                 <ol>
                     <li>
                         Let <var>json</var> be the result of [=extract the JSON fetch response=] from <var>response</var> and <var>responseBody</var>.
@@ -120,6 +120,50 @@
                 If |authServer| [=url/scheme=] is not `https`, return failure.
             </li>
             <li>
+                <p>Construct a {{ GrantRequest }} |grantRequest| as follows:</p>
+                <ol>
+                    <li>
+                        Set |grantRequest|'s {{GrantRequest/client}} to <var>walletAddressDetails</var>'s {{WalletAddressDetails/url}} property.
+                    </li>
+                    <li>
+                        Set |grantRequest|'s {{GrantRequest/interact}} to a new {{ Interact }} with {{Interact/start}} set to `["redirect"]`.
+                    </li>
+                    <li>
+                        Let |quoteAccess| be a new {{ Access }} object with:
+                        <ul>
+                            <li>{{Access/type}} set to `"quote"`</li>
+                            <li>{{Access/actions}} set to `["create"]`</li>
+                        </ul>
+                    </li>
+                    <li>
+                        Let |debitAmount| be a new {{ Amount }} object with:
+                        <ul>
+                            <li>{{Amount/value}} set to |budget|</li>
+                            <li>{{Amount/assetScale}} set to <var>walletAddressDetails</var>'s {{WalletAddressDetails/assetScale}} property</li>
+                            <li>{{Amount/assetCode}} set to <var>walletAddressDetails</var>'s {{WalletAddressDetails/assetCode}} property</li>
+                        </ul>
+                    </li>
+                    <li>
+                        Let |accessLimits| be a new {{ AccessLimits }} object with {{AccessLimits/debitAmount}} set to |debitAmount|.
+                    </li>
+                    <li>
+                        Let |paymentAccess| be a new {{ Access }} object with:
+                        <ul>
+                            <li>{{Access/type}} set to `"outgoing-payment"`</li>
+                            <li>{{Access/actions}} set to `["create", "read"]`</li>
+                            <li>{{Access/identifier}} set to <var>walletAddressDetails</var>'s {{WalletAddressDetails/url}} property</li>
+                            <li>{{Access/limits}} set to |accessLimits|</li>
+                        </ul>
+                    </li>
+                    <li>
+                        Set |grantRequest|'s {{GrantRequest/access_token}} to a new {{ RequestAccessToken }} with:
+                        <ul>
+                            <li>{{RequestAccessToken/access}} set to a list containing |quoteAccess| and |paymentAccess|</li>
+                        </ul>
+                    </li>
+                </ol>
+            </li>
+            <li>
                 <p>Let <var>request</var> be a new [=request=] as follows:</p>
                 <dl>
                     <dt>[=request/URL=]</dt>
@@ -127,7 +171,7 @@
                     <dt>[=request/method=]</dt>
                     <dd>"POST"</dd>
                     <dt>[=request/body=]</dt>
-                    <dd>the result of running [=serialize a JavaScript value to a JSON string=] on a {{ GrantRequest }}</dd>
+                    <dd>the result of running [=serialize a JavaScript value to a JSON string=] on |grantRequest|</dd>
                     <dt>[=request/redirect mode=]</dt>
                     <dd>"follow"</dd>
                     <dt>[=request/client=]</dt>
